Transition to Java 21 and Gradle 8.12.